# grimoire

./: .gitignore  .mailmap  0x539.gpg  28988BF5.gpg  API_VERSION  CMAKE_CONFIGURE  CMAKE_DEPENDS  CMAKE_FUNCTIONS  ChangeLog  Changes.kde6  DFL_DEPENDS  FUNCTIONS  GO_FUNCTIONS  KDE4_DEPENDS  KDE4_FUNCTIONS  KDE5_DEPENDS  KDE5_FUNCTIONS  KDE_DEPENDS  KDE_EXTRA  KDE_FUNCTIONS  KDE_FUTURE  KDE_FW  KDE_GEAR  KDE_PLASMA  KDE_VERSIONS  LXQT_VERSION  MAUI  MESON_CONFIGURE  MESON_DEPENDS  MESON_FUNCTIONS  NETSURF_FUNCTIONS  PYSIDE6  QT5_DEPENDS  QT6_DEPENDS  QT_DEPENDS  README  README.md  REPAIR^all^find_depends.function  REPAIR^all^preserve.function  SSO  (+75 more)
crypto/cryfs/: BUILD  CMakeLists.txt  DEPENDS  DETAILS  HISTORY  PRE_BUILD  cryfs.gpg
crypto/cryfs/patches/: 0001-cpp-utils-improvement.patch  0001-do-not-ref-vendor.patch  0002-cmake-improvements.patch  0002-fix-logging.patch  0003-cmake-fixes.patch  0003-fix-logging.patch  boost.diff
database/flamerobin/: BUILD  CMakeLists.txt  DEPENDS  DETAILS  FindFirebird.cmake  HISTORY  PREPARE  PRE_BUILD
devel/duktape/: BUILD  CMakeLists.txt  DETAILS  HISTORY  PRE_BUILD
doc/ebook-tools/: CMakeLists.txt  DEPENDS  DETAILS  HISTORY  PRE_BUILD  cm.diff
libs/inotify-cxx/files/: CMakeLists.txt  inotify-cxx.pc.in
libs/pugixml/: BUILD  CMakeLists.txt  CONFIGURE  DEPENDS  DETAILS  HISTORY  PRE_BUILD
libs/tinyxml/: CMakeLists.txt  CONFIGURE  DEPENDS  DETAILS  HISTORY  PRE_BUILD  PRE_SUB_DEPENDS  SUB_DEPENDS
mail/claws-mail/claws-mail-3.17.1/src/: Makefile.am  Makefile.in  account.c  account.h  action.c  addr_compl.c  addr_compl.h  addrbook.c  addrcache.c  addrclip.c  addrcustomattr.c  addrduplicates.c  addressadd.c  addressadd.h  addressbook-dbus.c  addressbook-dbus.h  addressbook.c  addressbook.h  addressbook_foldersel.c  addrgather.c  addrgather.h  addrharvest.c  addrharvest.h  addrindex.c  addrindex.h  addritem.c  addritem.h  addrmerge.c  addrmerge.h  addrselect.c  advsearch.c  alertpanel.c  alertpanel.h  autofaces.c  avatars.c  avatars.h  browseldap.c  claws-contacts.xml  codeconv.c  codeconv.h  (+175 more)
mail/claws-mail/claws-mail-3.17.1/src/common/: Makefile.am  Makefile.in  claws.c  defs.h  hooks.c  hooks.h  log.c  log.h  mgutils.c  passcrypt.c  pkcs5_pbkdf2.c  pkcs5_pbkdf2.h  plugin.c  plugin.h  prefs.c  proxy.c  proxy.h  session.c  session.h  smtp.c  smtp.h  socket.c  socket.h  ssl.c  ssl.h  ssl_certificate.c  ssl_certificate.h  string_match.c  template.c  template.h  timing.h  tlds.h  utils.c  utils.h  version.h  version.h.in  w32_account.c  w32_stat.c  w32_stdio.c  w32_stdlib.c  (+5 more)
mail/claws-mail/claws-mail-3.17.1/src/etpan/: Makefile.am  Makefile.in  etpan-ssl.c  etpan-ssl.h  etpan-thread-manager.c  imap-thread.c  imap-thread.h  nntp-thread.c  nntp-thread.h
mail/claws-mail/claws-mail-3.17.1/src/gtk/: Makefile.am  Makefile.in  about.c  about.h  authors.h  claws-marshal.c  claws-marshal.h  claws-marshal.list  colorlabel.c  combobox.c  combobox.h  description_window.c  description_window.h  filesel.c  filesel.h  foldersort.c  foldersort.h  gtkaspell.c  gtkcmclist.c  gtkcmclist.h  gtkcmctree.c  gtkcmoptionmenu.c  gtksctree.c  gtksctree.h  gtkshruler.c  gtkunit.c  gtkutils.c  gtkutils.h  gtkvscrollbutton.c  headers.h  icon_legend.c  inputdialog.c  logwindow.c  logwindow.h  manage_window.c  menu.c  menu.h  pluginwindow.c  pluginwindow.h  prefswindow.c  (+6 more)
mail/claws-mail/claws-mail-3.17.1/src/pixmaps/: address.xpm  address_book.xpm  address_search.xpm  book.xpm  check_spelling.xpm  claws_mail_compose_logo.xpm  claws_mail_icon.xpm  claws_mail_icon_64.xpm  claws_mail_logo.xpm  claws_mail_logo_small.xpm  clip.xpm  clip_gpg_signed.xpm  clipkey.xpm  copied.xpm  delete_btn.xpm  delete_dup_btn.xpm  deleted.xpm  dir_noselect_close.xpm  dir_noselect_close_mark.xpm  dir_noselect_open.xpm  dir_subs_close.xpm  dir_subs_close_mark.xpm  dir_subs_open.xpm  doc_index.xpm  doc_index_close.xpm  doc_info.xpm  down_arrow.xpm  first_arrow.xpm  forwarded.xpm  gpg_signed.xpm  group.xpm  ham_btn.xpm  ignorethread.xpm  insert_file.xpm  jpilot.xpm  key.xpm  key_gpg_signed.xpm  last_arrow.xpm  ldap.xpm  left_arrow.xpm  (+66 more)
mail/claws-mail/claws-mail-3.17.1/src/plugins/: Makefile.am  Makefile.in
mail/claws-mail/claws-mail-3.17.1/src/plugins/acpi_notifier/: Makefile.am  Makefile.in  acpi_notifier.c
mail/claws-mail/claws-mail-3.17.1/src/plugins/address_keeper/: Makefile.am  Makefile.in  address_keeper.c  address_keeper.h  address_keeper_prefs.c  address_keeper_prefs.h  claws.def  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/archive/: Makefile.am  Makefile.in  archiver.c  archiver.h  archiver_gtk.c  archiver_prefs.c  archiver_prefs.h  libarchive_archive.c  libarchive_archive.h
mail/claws-mail/claws-mail-3.17.1/src/plugins/att_remover/: Makefile.am  Makefile.in  att_remover.c  claws.def  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/attachwarner/: Makefile.am  Makefile.in  attachwarner.c  attachwarner.h  attachwarner_prefs.c  attachwarner_prefs.h  claws.def  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/bogofilter/: Makefile.am  Makefile.in  bogofilter.c  bogofilter.h  bogofilter_gtk.c
mail/claws-mail/claws-mail-3.17.1/src/plugins/bsfilter/: Makefile.am  Makefile.in  bsfilter.c  bsfilter.h  bsfilter_gtk.c  claws.def  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/clamd/: Makefile.am  Makefile.in  clamav_plugin.c  clamav_plugin.h  clamav_plugin_gtk.c
mail/claws-mail/claws-mail-3.17.1/src/plugins/demo/: Makefile.am  Makefile.in  demo.c
mail/claws-mail/claws-mail-3.17.1/src/plugins/dillo/: Makefile.am  Makefile.in  README  dillo_prefs.c  dillo_viewer.c
mail/claws-mail/claws-mail-3.17.1/src/plugins/fancy/: Makefile.am  Makefile.in  claws.def  fancy_prefs.c  fancy_prefs.h  fancy_viewer.c  fancy_viewer.h  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/fetchinfo/: Makefile.am  Makefile.in  claws.def  fetchinfo_plugin.c  fetchinfo_plugin.h  fetchinfo_plugin_gtk.c  version.rc
mail/claws-mail/claws-mail-3.17.1/src/plugins/gdata/: Makefile.am  Makefile.in  cm_gdata_contacts.c  cm_gdata_contacts.h  cm_gdata_prefs.c  (+3 more)
(+65941 files in other folders)
