# Copyright 1999-2014 the Claws Mail team.
# This file is part of Claws Mail package, and distributed under the
# terms of the General Public License version 3 (or later).
# See COPYING file for license details.

SUBDIRS = \
	acpi_notifier \
	address_keeper \
	archive \
	att_remover \
	attachwarner \
	bogofilter \
	bsfilter \
	clamd \
	demo \
	dillo \
	fancy \
	fetchinfo \
	gdata \
	libravatar \
	mailmbox \
	managesieve \
	newmail \
	notification \
	pdf_viewer \
	perl \
	python \
	pgpcore \
	pgpmime \
	pgpinline \
	rssyl \
	smime \
	spamassassin \
	spam_report \
	tnef_parse \
	vcalendar
